--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -231,7 +231,15 @@ footer {
   h4 {
     color: rgb(67, 105, 113);
     font-size: 1.01em;
+    @media screen and (max-width: 500px) {
+      padding-bottom: 5px;
+      font-size: 1em;
+    }
   }
+}
+
+.contact-card:nth-of-type(2) {
+  width: 500px;
 }
 
 .phone-area,
