--- a/team/css/style.css
+++ b/team/css/style.css
@@ -177,6 +177,32 @@ section {
   text-align: center;
 
 }
+.faculty{
+  justify-content: center;
+}
+.descbox{
+  margin-right: 25%;
+  margin-left: 25%;
+  align-content: center;
+  display: flex;
+  padding: 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  border-radius: 10px;
+}
+.descbox .milindsir{
+  
+} 
+.descbox:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.descbox .frame{
+  position: relative;
+  margin: 5px;
+  padding: 5px;
+
+}
 
 .team-box-container {
   display: flex;
@@ -204,7 +230,7 @@ section {
 /* Style the counter cards */
 .card {
   margin: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   padding: 15px;
   text-align: center;
   background-color: #fff;
@@ -215,10 +241,10 @@ section {
 .card .profile {
   border-radius: 10px;
   transition: 0.5s;
+  background-color: #A0E7E5;
 }
-
 .card:hover .profile {
-  transform: scale(1.4);
+  transform: scale(1.2);
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
 }
@@ -235,38 +261,23 @@ section {
   width: 100%;
   height: 100%;
   background-color: #f1f1f1e6;
-  transition: 0.6s;
-
+  transition: 0.3s;
+  border-radius: 10px;
   z-index: 1;
   padding: 10px;
 }
-
-/* .from-left {
-  top: 0;
-  left: -100%;
-}
-
-.card:hover .content .from-left {
-  left: 0%;
-} */
 
 .back {
   top: 100%;
   left: 0;
 }
-
+.card:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  transition: 0.3s;
+}
 .card:hover .content .back {
   top: 0%;
 }
-
-/* .from-right {
-  top: 0%;
-  right: -100%;
-}
-
-.card:hover .content .from-right {
-  right: 0;
-} */
 
 .card .content .back h3 {
   font-size: 15px;
