--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -212,6 +212,9 @@ footer {
   margin-bottom: 10px;
   i {
     font-size: 20px;
+    @media screen and (max-width: 900px) {
+      font-size: 22px;
+    }
   }
 }
 
