increased footer icon size

--- a/common/css/footer.scss
+++ b/common/css/footer.scss
@@ -58,6 +58,10 @@ footer {
       text-align: left;
     }
   }
+  .social-media-cont .bi {
+    font-size: 2.0em;
+  }
+  
   
   .phone-area,
   .email-area {
