--- a/common/css/footer.css
+++ b/common/css/footer.css
@@ -57,6 +57,10 @@ footer {
   text-align: left;
 }
 
+.social-media-cont .bi {
+  font-size: 2em;
+}
+
 .phone-area,
 .email-area {
   display: flex;
