--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -889,6 +889,11 @@ section:nth-of-type(5) {
   width: 325px;
 }
 
+.cards:nth-of-type(1) {
+  width: 327px;
+}
+
+.cards:nth-of-type(3) .card-img-cont,
 .cards:nth-of-type(4) .card-img-cont {
   width: 210px;
 }
