--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -762,6 +762,123 @@ nav {
     top: 50px;
   }
 }
+footer {
+  height: auto;
+  background-color: #292f36;
+}
+
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 75px 100px;
+  background: rgb(255, 255, 255);
+}
+.footer-wrapper h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.footer-ecell {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-ecell a {
+  color: rgb(127, 192, 187);
+  font-size: 16px;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 50px;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px 60px;
+  flex-wrap: wrap;
+}
+
+.contact-card {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+}
+.contact-card h4 {
+  color: rgb(67, 105, 113);
+  font-size: 16px;
+  text-align: left;
+}
+
+.social-media-cont .bi {
+  font-size: 22px;
+}
+
+.phone-area,
+.email-area {
+  display: flex;
+  flex-direction: row;
+  gap: 0 1em;
+}
+
+.footer-ecell {
+  text-align: center;
+  text-transform: capitalize;
+  color: rgb(127, 192, 187);
+  padding: 20px 16px;
+}
+.footer-ecell h5 {
+  font-weight: 500;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 900px) {
+  h1 {
+    font-size: 2.5rem;
+    color: var(--font-blk);
+  }
+  .footer-wrapper h1 {
+    color: var(--font-blk);
+    font-size: 2rem;
+  }
+  .contact-wrapper {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 550px) {
+  h1 {
+    font-size: 2.5rem;
+    color: var(--font-blk);
+  }
+  .footer-wrapper {
+    padding: 25px 10px;
+  }
+  .footer-wrapper h1 {
+    color: var(--font-blk);
+    font-size: 1.5rem;
+  }
+  .contact-wrapper {
+    justify-content: center;
+  }
+  .contact-card h4 {
+    font-size: 14px;
+  }
+  .footer-ecell h5 {
+    font-weight: 400;
+    font-size: 12px;
+  }
+}
 :root {
   --background-color: #f7f7f7;
   --font-blk: #292f36;
@@ -923,106 +1040,6 @@ section:nth-of-type(5) {
   }
 }
 
-footer {
-  width: 100%;
-  height: auto;
-  background-color: #292f36;
-}
-
-.footer-wrapper {
-  width: 100%;
-  height: calc(45vh - 10%);
-  padding: 25px 100px;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(180deg, rgb(255, 255, 255) 25%, rgb(226, 226, 226) 100%);
-}
-.footer-wrapper h1 {
-  color: var(--font-blk);
-  font-size: 2.5rem;
-  text-align: center;
-}
-
-.footer-ecell {
-  height: calc(10vh - 4%);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-}
-.footer-ecell a {
-  color: rgb(127, 192, 187);
-  font-size: 16px;
-}
-
-.social-media {
-  width: 500px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 10px;
-}
-.social-media i {
-  font-size: 20px;
-}
-@media screen and (max-width: 900px) {
-  .social-media i {
-    font-size: 22px;
-  }
-}
-
-.contact-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-top: 2.25%;
-  margin-left: 7.5%;
-}
-
-.contact-card {
-  width: 350px;
-  height: auto;
-}
-.contact-card h4 {
-  color: rgb(67, 105, 113);
-  font-size: 1.01em;
-}
-@media screen and (max-width: 500px) {
-  .contact-card h4 {
-    padding-bottom: 5px;
-    font-size: 1em;
-  }
-}
-
-.contact-card:nth-of-type(2) {
-  width: 500px;
-}
-
-.phone-area,
-.email-area {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  gap: 0 1em;
-}
-
-.contact-content {
-  display: block;
-}
-
-.footer-ecell {
-  text-align: center;
-  text-transform: capitalize;
-  color: rgb(127, 192, 187);
-  padding: 20px 16px;
-}
-.footer-ecell h5 {
-  font-weight: 500;
-}
-
 @media screen and (max-width: 1100px) {
   h1 {
     font-size: 2.1rem;
@@ -1067,40 +1084,6 @@ footer {
     -o-object-fit: contain;
        object-fit: contain;
   }
-  .footer-wrapper {
-    height: calc(60vh - 10%);
-    padding: 25px 32px;
-  }
-  .footer-wrapper h1 {
-    color: var(--font-blk);
-    font-size: 2rem;
-  }
-  .footer-ecell {
-    height: calc(10vh - 2.5%);
-  }
-  .footer-wrapper {
-    text-align: center;
-  }
-  .contact-wrapper {
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    gap: 2em 0;
-    padding: 0 10px;
-    margin: 0;
-    margin-top: 2.5%;
-    margin-left: 5%;
-  }
-  .contact-card {
-    width: 350px;
-    height: auto;
-    text-align: left;
-  }
-  .contact-card h4 {
-    color: rgb(67, 105, 113);
-    font-size: 1.01em;
-  }
   .incentives-wrapper {
     gap: 0;
     margin-top: 60px;
@@ -1108,9 +1091,6 @@ footer {
   .card-img-cont {
     height: 150px;
     width: 150px;
-  }
-  .social-media {
-    width: 100%;
   }
 }
 @media screen and (min-width: 395px) and (max-width: 501px) {
@@ -1135,17 +1115,6 @@ footer {
   }
   section:nth-of-type(3) {
     height: calc(105vh + 12.5%);
-  }
-  .footer-wrapper {
-    padding: 25px 16px;
-    height: calc(55vh + 10%);
-  }
-  .social-media {
-    width: 100%;
-  }
-  .footer-ecell {
-    height: calc(12vh - 10%);
-    width: 100%;
   }
 }
 @media screen and (max-width: 392px) {
@@ -1173,18 +1142,5 @@ footer {
   }
   section:nth-of-type(5) {
     height: auto;
-  }
-  .social-media {
-    width: 100%;
-  }
-  footer {
-    height: auto;
-  }
-  .footer-wrapper {
-    padding: 25px 16px;
-    height: auto;
-  }
-  .footer-ecell {
-    height: calc(22vh - 10%);
   }
 }/*# sourceMappingURL=style.css.map */
