--- a/projectpillar/src/css/_countdown.scss
+++ b/projectpillar/src/css/_countdown.scss
@@ -14,6 +14,7 @@
 
   @media screen and (max-width: 501px) {
     padding: 0px 8px;
+    transform: scale(0.75);
   }
 
   @media screen and (max-width: 900px) {
