--- a/projectpillar/src/css/_countdown.scss
+++ b/projectpillar/src/css/_countdown.scss
@@ -24,6 +24,7 @@
     transform: scale(0.85);
   }
   @media screen and (min-width: 1000px) and (max-height: 775px) {
+    margin-top: 0.5%;
     transform: scale(0.65);
   }
 }
