--- a/projectpillar/src/css/_scrollDownArrow.scss
+++ b/projectpillar/src/css/_scrollDownArrow.scss
@@ -13,6 +13,9 @@
   a:visited {
     color: rgb(203, 203, 203);
   }
+  @media screen and (min-width: 1000px) and (max-height: 775px) {
+   margin-top: 0.5%;
+  }
 }
 
 .mouse {
@@ -41,7 +44,7 @@
   }
 
   @media screen and (min-width: 1000px) and (max-height: 775px) {
-    transform: scale(0.75);
+    display: none;
   }
 }
 
