--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -564,6 +564,7 @@ nav {
 }
 @media screen and (min-width: 1000px) and (max-height: 775px) {
   .container {
+    margin-top: 0.5%;
     transform: scale(0.65);
   }
 }
@@ -717,6 +718,11 @@ nav {
 .scroll-down a:visited {
   color: rgb(203, 203, 203);
 }
+@media screen and (min-width: 1000px) and (max-height: 775px) {
+  .scroll-down {
+    margin-top: 0.5%;
+  }
+}
 
 .mouse {
   margin-top: 4%;
@@ -747,7 +753,7 @@ nav {
 }
 @media screen and (min-width: 1000px) and (max-height: 775px) {
   .mouse {
-    transform: scale(0.75);
+    display: none;
   }
 }
 
