--- a/src/css/testim.css
+++ b/src/css/testim.css
@@ -1,115 +1,166 @@
-.testimony{
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    background-color: #eefafc;
-    padding: 75px 0px;
-}
-.testimony h1 {
+
+  .testimony h1{
+    padding-top: 60px;
     font-size: 2.5em;
     font-weight: 600;
     color: var(--font-blk);
     text-align: center;
 }
-
-.testim-wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 20px;
-
-}
-
-.testim-image {
-    width: 40%;
-}
-
-#testim-img {
+  
+  /* body {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    color: #444;
+    line-height: 1.9;
+    background-color: #f3f3f3;
+  } */
+  /* SLIDER */
+  .slider {
+    max-width: 100rem;
+    height: 50rem;
+    margin: 0 auto;
+    position: relative;
+  
+    /* IN THE END */
+    overflow: hidden;
+  }
+  
+  .slide {
+    position: absolute;
+    top: 0;
     width: 100%;
-    height: 50%;
-}
-
-.testim-text-wrapper {
-    text-align: justify;
-    width: 50%;
+    height: 50rem;
+  
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: 50%;
-}
-
-.testim-quote-icon {
-    align-self: flex-end;
-    max-width: 5%;
-    max-height: 5%;
-}
-.testim-text-wrapper p {
-    text-align: right;
-    font-size: 2.5vh;
-}
-
-.testim-text-wrapper q {
-    font-weight: 400;
-    font-size: 25px
-}
-
-.testim-text-wrapper h4 {
-    text-align: right;
-    font-weight: bolder;
-    /* font-size: 150%; */
-    font-size: 3vh;
-}
-
-@media screen and (max-width: 900px) {
-
-    .testim-image {
-        width: 100%;
-    }
-
-    #testim-img {
-        width: 100%;
-        height: 50%;
-    }
-
-    .testim-wrapper {
-        flex-direction: column;
-        padding: 10px 20px;
-        align-items: center;
-    }
-    .testim-text-wrapper {
-        width: 100%;
-    }
-
-    .testim-text-wrapper p {
-        font-size: 4vh;
-    }
-
-    .testim-text-wrapper q {
-        font-weight: 300;
-        font-size: 2.2vh;
-    }
-
-    .testim-text-wrapper h4 {
-        font-weight: bolder;
-        font-size: 3vh;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    .testim-text-wrapper q {
-        font-weight: 300;
-        font-size: 1.7vh;
-    }
-
-    
-    .testim-text-wrapper h4 {
-        font-weight: bolder;
-        font-size: 2vh;
-    }
-
-    .testim-text-wrapper p {
-        font-size: 3vh;
-    }
-
-
-}
+    align-items: center;
+    justify-content: center;
+  
+    /* THIS creates the animation! */
+    transition: transform 1s;
+  }
+  
+  .slide > img {
+    /* Only for images that have different size than slide */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .slider__btn {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+  
+    border: none;
+    background: rgba(255, 255, 255, 0.7);
+    font-family: inherit;
+    color: #333;
+    border-radius: 50%;
+    height: 5.5rem;
+    width: 5.5rem;
+    font-size: 3.25rem;
+    cursor: pointer;
+  }
+  
+  .slider__btn--left {
+    left: 6%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .slider__btn--right {
+    right: 6%;
+    transform: translate(50%, -50%);
+  }
+  
+  .dots {
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+  
+  .dots__dot {
+    border: none;
+    background-color: #b9b9b9;
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-right: 1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+  
+    /* Only necessary when overlying images */
+    /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
+  }
+  
+  .dots__dot:last-child {
+    margin: 0;
+  }
+  
+  .dots__dot--active {
+    /* background-color: #fff; */
+    background-color: #888;
+    opacity: 1;
+  }
+  
+  /* TESTIMONIALS */
+  .testimonial {
+    width: 65%;
+    position: relative;
+  }
+  
+  .testimonial::before {
+    content: '\201C';
+    position: absolute;
+    top: -5.7rem;
+    left: -6.8rem;
+    line-height: 1;
+    font-size: 20rem;
+    font-family: inherit;
+    color: var(--color-primary);
+    z-index: -1;
+  }
+  
+  .testimonial__header {
+    font-size: 2.25rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+  }
+  
+  .testimonial__text {
+    font-size: 1.7rem;
+    margin-bottom: 3.5rem;
+    color: #666;
+  }
+  
+  .testimonial__author {
+    margin-left: 3rem;
+    font-style: normal;
+  
+    display: grid;
+    grid-template-columns: 6.5rem 1fr;
+    column-gap: 2rem;
+  }
+  
+  .testimonial__photo {
+    grid-row: 1 / span 2;
+    width: 6.5rem;
+    border-radius: 50%;
+  }
+  
+  .testimonial__name {
+    font-size: 1.7rem;
+    font-weight: 500;
+    align-self: end;
+    margin: 0;
+  }
+  
+  .testimonial__position {
+    font-size: 1.5rem;
+  }
+  
+  .section__title--testimonials {
+    margin-bottom: 4rem;
+  }
