--- a/common/css/footer.css
+++ b/common/css/footer.css
@@ -57,6 +57,10 @@ footer {
   text-align: left;
 }
 
+.social-media-cont .bi {
+  font-size: 22px;
+}
+
 .phone-area,
 .email-area {
   display: flex;
@@ -72,6 +76,7 @@ footer {
 }
 .footer-ecell h5 {
   font-weight: 500;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 900px) {
