--- a/projectpillar/src/css/_countdown.scss
+++ b/projectpillar/src/css/_countdown.scss
@@ -14,6 +14,7 @@
 
   @media screen and (max-width: 501px) {
     padding: 0px 8px;
+    transform: scale(0.75);
   }
 
   @media screen and (max-width: 900px) {
@@ -23,6 +24,7 @@
     transform: scale(0.85);
   }
   @media screen and (min-width: 1000px) and (max-height: 775px) {
+    margin-top: 0.5%;
     transform: scale(0.65);
   }
 }
