--- a/team/css/style.css
+++ b/team/css/style.css
@@ -156,7 +156,7 @@ section {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 90%;
   height: auto;
@@ -177,32 +177,43 @@ section {
   text-align: center;
 
 }
-
-.container {
-  width: 900px;
-  margin: 0px auto;
+.faculty{
+  justify-content: center;
+}
+.descbox{
+  margin-right: 25%;
+  margin-left: 25%;
+  align-content: center;
+  display: flex;
+  padding: 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  border-radius: 10px;
+}
+.descbox .milindsir{
+  
+} 
+.descbox:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-/* Float three columns side by side */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 0 10px;
+.descbox .frame{
+  position: relative;
+  margin: 5px;
+  padding: 5px;
+
 }
 
-/* Remove extra left and right margins, due to padding */
-.row {
-  margin: 20px -5px;
+.team-box-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-right: 50px;
+  gap: 10px;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive columns */
 @media screen and (max-width: 700px) {
 
   .container {
@@ -218,8 +229,9 @@ section {
 
 /* Style the counter cards */
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 5px;
+  margin: 15px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  padding: 15px;
   text-align: center;
   background-color: #fff;
   border-radius: 10px;
@@ -229,10 +241,10 @@ section {
 .card .profile {
   border-radius: 10px;
   transition: 0.5s;
+  background-color: #A0E7E5;
 }
-
 .card:hover .profile {
-  transform: scale(1.4);
+  transform: scale(1.2);
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
 }
@@ -249,38 +261,23 @@ section {
   width: 100%;
   height: 100%;
   background-color: #f1f1f1e6;
-  transition: 0.6s;
-
+  transition: 0.3s;
+  border-radius: 10px;
   z-index: 1;
   padding: 10px;
 }
-
-/* .from-left {
-  top: 0;
-  left: -100%;
-}
-
-.card:hover .content .from-left {
-  left: 0%;
-} */
 
 .back {
   top: 100%;
   left: 0;
 }
-
+.card:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  transition: 0.3s;
+}
 .card:hover .content .back {
   top: 0%;
 }
-
-/* .from-right {
-  top: 0%;
-  right: -100%;
-}
-
-.card:hover .content .from-right {
-  right: 0;
-} */
 
 .card .content .back h3 {
   font-size: 15px;
