--- a/src/css/testim.css
+++ b/src/css/testim.css
@@ -116,55 +116,97 @@
   }
   
   /* TESTIMONIALS */
+
   .testimonial {
-    width: 65%;
+    width: 85%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  
+  .testimonial__text{
+    font-size: .7rem;
+  }
+  .testimonial__header{
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+  }
   .testimonial::before {
     content: '\201C';
     position: absolute;
-    top: -5.7rem;
-    left: -6.8rem;
+    top: -4rem;
+    left: -1rem;
     line-height: 1;
-    font-size: 20rem;
+    font-size: 10rem;
     font-family: inherit;
     color: var(--color-primary);
     z-index: -1;
   }
-  
-  .testimonial__header {
-    font-size: 2.25rem;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
+  .testimonial__photo {
+    width: 200px;
   }
-  
-  .testimonial__text {
+  .testimonial__name {
+    text-align: right;
     font-size: 1.7rem;
-    margin-bottom: 3.5rem;
-    color: #666;
+    font-weight: 500;
+    margin: 0;
   }
-  
   .testimonial__author {
     margin-left: 3rem;
     font-style: normal;
-  
-    display: grid;
-    grid-template-columns: 6.5rem 1fr;
-    column-gap: 2rem;
+    justify-content: space-between;
+    display: flex;
   }
   
-  .testimonial__photo {
-    grid-row: 1 / span 2;
-    width: 15rem;
-    border-radius: 50%;
+  .testimonial__position {
+    font-size: 1.5rem;
+    text-align: right;
   }
   
-  .testimonial__name {
-    font-size: 1.7rem;
-    font-weight: 500;
-    align-self: end;
-    margin: 0;
+  .section__title--testimonials {
+    margin-bottom: 4rem;
+  }
+
+  @media (min-width:720px){
+    .testimonial {
+      width: 75%;
+      flex-direction: row;
+      gap: 20px;
+      align-items: flex-start;
+    }
+    
+    .testimonial::before {
+      top: -2.5rem;
+      left: -4.8rem;
+      font-size: 13rem;
+    }
+    
+    .testimonial__header {
+      font-size: 1.5rem;
+    }
+    
+    .testimonial__text {
+      font-size: .9rem;
+      color: #666;
+    }
+  
+    .testimonial__photo {
+      width: 175px;
+    }
+  
+    .testimonial__name {
+      font-size: 1.7rem;
+      font-weight: 500;
+      margin: 0;
+    }
+    
+  .testimonial__author {
+    margin-left: 3rem;
+    font-style: normal;
+    justify-content: space-between;
+    display: flex;
   }
   
   .testimonial__position {
@@ -173,4 +215,5 @@
   
   .section__title--testimonials {
     margin-bottom: 4rem;
+  }
   }
