--- a/src/css/testim.css
+++ b/src/css/testim.css
@@ -66,8 +66,8 @@
     font-family: inherit;
     color: #333;
     border-radius: 50%;
-    height: 5.5rem;
-    width: 5.5rem;
+    height: 3.5rem;
+    width: 3.5rem;
     font-size: 3.25rem;
     cursor: pointer;
   }
@@ -75,16 +75,18 @@
   .slider__btn--left {
     left: 6%;
     transform: translate(-50%, -50%);
+    font-size: 2em;
   }
   
   .slider__btn--right {
     right: 6%;
     transform: translate(50%, -50%);
+    font-size: 2em;
   }
   
   .dots {
     position: absolute;
-    bottom: 5%;
+    bottom: 7%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -149,7 +151,7 @@
   }
   .testimonial__name {
     text-align: right;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 500;
     margin: 0;
   }
@@ -217,3 +219,167 @@
     margin-bottom: 4rem;
   }
   }
+
+  @media (min-width:1024px){
+    .testimony{
+      height: 58em;
+    }
+    .testimonial {
+      width: 70%;
+      flex-direction: row;
+      gap: 25px;
+      align-items: flex-start;
+    }
+    
+    .testimonial::before {
+      top: -2.5rem;
+      left: -4.8rem;
+      font-size: 13rem;
+    }
+    
+    .testimonial__header {
+      font-size: 1.8em;
+      padding-bottom: 3%;
+    }
+    
+    .testimonial__text {
+      font-size: 1em;
+      color: #666;
+      padding-bottom: 10%;
+    }
+  
+    .testimonial__photo {
+      width: 275px;
+    }
+  
+    .testimonial__name {
+      font-size: 2em;
+      font-weight: 500;
+      margin: 0;
+    }
+    
+  .testimonial__author {
+    margin-left: 3.5rem;
+    font-style: normal;
+    justify-content: flex-end;
+    display: flex;
+  }
+  
+  .testimonial__position {
+    font-size: 1.5rem;
+  }
+  
+  .section__title--testimonials {
+    margin-bottom: 4rem;
+  }
+  
+  .slider__btn {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+  
+    border: none;
+    background: rgba(255, 255, 255, 0.7);
+    font-family: inherit;
+    color: #333;
+    border-radius: 50%;
+    height: 4rem;
+    width: 4rem;
+    font-size: 3.5rem;
+    cursor: pointer;
+  }
+  
+  .slider__btn--left {
+    left: 6%;
+    transform: translate(-50%, -50%);
+    font-size: 2.3em;
+  }
+  
+  .slider__btn--right {
+    right: 6%;
+    transform: translate(50%, -50%);
+    font-size: 2.3em;
+  }
+}
+
+@media (min-width:1440px){
+  .testimony{
+    height: 58em;
+  }
+  .testimonial {
+    width: 65%;
+    flex-direction: row;
+    gap: 35px;
+    align-items: flex-start;
+  }
+  
+  .testimonial::before {
+    top: -2.5rem;
+    left: -4.8rem;
+    font-size: 13.5rem;
+  }
+  
+  .testimonial__header {
+    font-size: 2.1em;
+    padding-bottom: 5%;
+  }
+  
+  .testimonial__text {
+    font-size: 1.2em;
+    color: #666;
+    padding-bottom: 5%;
+  }
+
+  .testimonial__photo {
+    width: 300px;
+  }
+
+  .testimonial__name {
+    font-size: 2.2em;
+    font-weight: 500;
+    margin: 0;
+  }
+  
+.testimonial__author {
+  margin-left: 4rem;
+  font-style: normal;
+  justify-content: flex-end;
+  display: flex;
+}
+
+.testimonial__position {
+  font-size: 1.7rem;
+}
+
+.section__title--testimonials {
+  margin-bottom: 4rem;
+}
+
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+
+  border: none;
+  background: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  color: #333;
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+  font-size: 3.5rem;
+  cursor: pointer;
+}
+
+.slider__btn--left {
+  left: 6%;
+  transform: translate(-50%, -50%);
+  font-size: 2.3em;
+}
+
+.slider__btn--right {
+  right: 6%;
+  transform: translate(50%, -50%);
+  font-size: 2.3em;
+}
+}
