--- a/common/css/nav.scss
+++ b/common/css/nav.scss
@@ -86,7 +86,7 @@ nav .icon-burger .line {
 		height: auto;
 		flex-direction: column;
 		justify-content: space-evenly;
-		background-color: rgba(32, 32, 32, 0.962);
+		background-color: rgb(32, 32, 32);
 		overflow: hidden;
 		box-sizing: border-box;
 		transition: all .5s ease-in-out;
@@ -96,7 +96,7 @@ nav .icon-burger .line {
     color: rgb(212, 212, 212);
 	}
 	nav :checked ~ .links {
-		bottom: 0;
+		bottom: -10px;
 	}
 	nav .icon-burger {
 		display: block;
