--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:  Helvetica;
+  font-family: "Poppins", sans-serif;
   
 }
 
@@ -883,179 +883,3 @@ background: #000;
 .lightbox .spinner {
   display: none;
 }
-
-
-
-/** Footer **/
-footer {
-  width: 100%;
-  height: auto;
-  position: relative;
-}
-
-.social-media {
-  height: auto;
-  width: 250px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-}
-
-.social-media-cont {
-  cursor: pointer;
-  position: relative;
-  text-decoration: none;
-  color: maroon;
-}
-
-.social-media-cont .bi {
-  font-size: 2.2em;
-}
-
-.email-footer {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  gap: 0 5em;
-  text-align: left;
-}
-
-@media screen and (max-width: 900px) {
-  .email-footer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 2em 0;
-  }
-}
-
-.email-area,
-.phone-area {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 0 0.5rem;
-  color: var(--font-blk);
-  font-weight: 500;
-}
-
-.contact-area {
-  color: whitesmoke;
-}
-
-.contact-area h4 {
-  font-size: 1.1em;
-}
-
-.footer-wrapper {
-  width: 100%;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 250px;
-  padding: 1em 2em;
-  background: maroon;
-}
-
-.footer-wrapper h3 {
-  font-size: 2.7em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-
-.footer-wrapper p {
-  font-size: 1.1em;
-  line-height: 2;
-}
-
-.footer-wrapper h4 {
-  font-weight: 600;
-}
-
-@media screen and (max-width: 900px) {
-  .footer-wrapper {
-    gap: 1em 0;
-    padding: 1.5em 3em;
-    height: auto;
-  }
-  .footer-wrapper h3 {
-    font-size: 2em;
-  }
-  .footer-wrapper p {
-    width: 100%;
-    font-size: 0.9em;
-  }
-}
-
-.footer-ecell {
-  color:maroon;
-  width: 100%;
-  background-color: var(--font-blk);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  gap: 0.5em 0;
-  padding: 1rem 3rem;
-}
-
-.footer-ecell h5 {
-  text-transform: capitalize;
-  font-weight: 500;
-  font-size: 1em;
-}
-
