--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -7,7 +7,7 @@ body , html {
 /* only overriding colors of nav bar here  */
 nav{
   position: fixed;
-  background-color: maroon;
+  background-color: rgba(114, 11, 11, 0.837);
 }
 nav .icon-burger .line {
   background-color: white;
@@ -175,15 +175,7 @@ nav .links a {
 .spon-wrap h1{
   font-size: 60px;
   color: whitesmoke;
-}
-.spon-wrap hr{
-  width: 15%;
-  height: 5px;
-  border: none;
-  background: whitesmoke;
-  margin: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 .spon-in {
@@ -218,7 +210,7 @@ nav .links a {
   }
 }
 
-@media(max-width: 400px){
+@media(max-width: 530px){
   .spon-in ul li {
     width: 110px;
   height: 110px;
@@ -240,15 +232,6 @@ nav .links a {
   font-weight: 600;
 }
 
-.jury hr{
-  width: 15%;
-  height: 5px;
-  border: none;
-  background: brown;
-  margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 /**
 .vertical {
   border-left: 2px solid brown;
@@ -479,7 +462,7 @@ justify-content: center;
 }
 
 .Winner h1{
-  color: rgb(255, 255, 255);
+  color: rgba(255, 238, 7, 0.877);
   margin-bottom: 40px;
 }
 
@@ -551,21 +534,12 @@ width: 100%;
 /** Gallery **/
 
 .Gallery h1{
-  margin-top: 1cm;
-  margin-bottom: 20px;
+  margin-top: 1.5cm;
+  margin-bottom: 40px;
   font-size: 70px;
 	text-align: center;
 	color: maroon;
 	font-weight: 700;
-}
-.Gallery hr{
-  width: 9%;
-		height: 5px;
-		border: none;
-		background: maroon;
-		margin: auto;
-		margin-top: 20px;
-		margin-bottom: 40px;
 }
 
 .gallery {
@@ -781,11 +755,11 @@ width: 100%;
 }
 
 .email-area i{
- color: white;
+ color: rgb(195, 201, 120);
 }
 
 .email-area a{
-  color: white !important;    
+  color: rgb(195, 201, 120) !important;    
  }
 
 
