--- a/src/css/testim.css
+++ b/src/css/testim.css
@@ -125,6 +125,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: auto;
   }
   .testimonial__text{
     font-size: .7rem;
