--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -985,10 +985,13 @@ section:nth-of-type(4) {
 
 .hero-img {
   width: 100%;
-  height: 40vh;
+  height: 50vh;
   -o-object-fit: contain;
      object-fit: contain;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .incentives-wrapper {
