--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -117,10 +117,12 @@ section:nth-of-type(4) {
 
 .hero-img {
   width: 100%;
-  height: 40vh;
+  height: 50vh;
   object-fit: contain;
-
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .incentives-wrapper {
