--- a/podcast/assets/css/style.scss
+++ b/podcast/assets/css/style.scss
@@ -50,7 +50,7 @@
   content: "";
   display: block;
   width: 100%;
-  height: 10vh;
+  height: 11vh;
   background: rgba(0, 0, 0);
   //     background: linear-gradient(
   //       180deg,
@@ -66,10 +66,11 @@
 .hero-card h5 {
   display: block;
   position: absolute;
-  bottom: 10vh;
+  bottom: 9vh;
   padding: 20vh 20px 0 20px;
   text-align: center;
   width: 100%;
+  z-index: 5;
   background: rgb(10, 28, 47);
   background: linear-gradient(
     180deg,
